[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Font_1.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 200
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Time" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "15000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 64.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "BTC: 00000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -34.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Собери биткойны!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalScore" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -106.5
margin_bottom = 106.5
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -200.0
margin_right = 80.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
text = "Начать!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -200.0
margin_right = -50.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Введите kWt"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
